--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,17 @@
 [build]
-  command = "npm run build:client"
+  command = "npm ci && npm run build:client"
   functions = "netlify/functions"
   publish = "dist/spa"
 
+[build.environment]
+  NODE_VERSION = "20.5.0"
 
 [functions]
   external_node_modules = ["express"]
   node_bundler = "esbuild"
-  
+
 [[redirects]]
   force = true
   from = "/api/*"
-  status = 200
   to = "/.netlify/functions/api/:splat"
+  status = 200
