--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://BharathRaj73.github.io/website",
   "name": "fusion-starter",
   "private": true,
   "type": "module",
@@ -11,6 +12,8 @@
     ]
   },
   "scripts": {
+    "predeploy": "npm run build:client",
+    "deploy": "gh-pages -d dist/spa",
     "dev": "vite",
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build",
@@ -75,6 +78,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
+    "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.539.0",
