--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "predeploy": "npm run build:client",
     "deploy": "gh-pages -d dist/spa",
     "dev": "vite",
-    "build": "npm run build:client && npm run build:server",
+    "build": "npm run build:client",
     "build:client": "vite build",
     "build:server": "vite build --config vite.config.server.ts",
     "start": "node dist/server/node-build.mjs",
